# MonoAI

./: .gitignore  README.md  STREAMING_API.md  _.py  ai.yaml  bugs.md  coiconf.yaml  collective_model.py  histories00799b59-c470-4622-90a5-aafc8688722e.json  histories0d9cca24-4740-4cb6-9937-70cc1abc4945.json  histories70fd5c81-ec71-4d1a-8d9e-0c85a87780d2.json  histories7e2b9052-9f7c-4012-91e2-d780c1014178.json  histories92057cad-475b-414d-9904-f12772e7d121.json  histories96270840-7da1-4184-a34b-cf70401a217e.json  historiesa436126b-325d-40c4-a6d0-4b4a474dbe2e.json  historiesafb36d6a-8278-4d32-bd44-dc3b3e4e1d0a.json  historiesd8cab336-2e93-4ca7-ae4d-9a188bfb7fcc.json  historiese59820f9-75f6-4023-bb75-42663a16c4c8.json  keys_manager.py  main.py  mcp_agentpy  model.py  monoai.yaml  multi_model.py  pyproject.toml  rate_limiter.db  requirements.txt  test.prompt  test.txt  test_chain.prompt  test_iter.prompt  text.txt  todo.md  token_cost.py  token_pricing.json  tools.prompt
.chainlit/: config.toml
chroma/: chroma.sqlite3
coicoi/: __init__.py  _config.py
coicoi/_agents/: collaborative_agent.py
coicoi/_tools/: __init__.py
coicoi/agents/: agent.py  collaborative_agent.py
coicoi/chat/: __init__.py  (+2 more)
docs/: coicoi.html  index.html  monoai.html  search.js
html/: monoai.html  search.js
models/: __init__.py  _prompt_executor.py  _response_processor.py  collective_model.py  model.py
monoai/: __init__.py
prompts/: fewshot_prompt.py  hello.prompt  prompt.py  prompt_chain.py  test.prompt
tests/: agent_test.py  collaborativeagent_test.py  collectivemodel_test.py  model_test.py  multiagent_test.py  multimodel_test.py
tokens/: token_cost.py
(+77 files in other folders)
